--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="app.css">
 </head>
-<body>
-  <!--<header ng-controller="UserCtrl">
+<body ng-controller="UserCtrl as user" ng-cloak>
+  <header>
   <div class="container">
     <div class="row">
       <div class="col-md-4">
@@ -28,9 +28,7 @@
       </div>
     </div>
   </div>
-  <a href="#/">Firms</a>
-  <a href="#/visits">Visits</a>
-  </header>-->
+  </header>
 
   <div ng-view></div>
 
@@ -53,8 +51,6 @@
   <script src="./bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <!--<script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>-->
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
