--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h4>Welcome {{ user.username }}</h4>
+        <h4>Welcome {{ username }}</h4>
       </div>
       <div class="col-md-offset-4 col-md-4">
         <div class="controls">
