--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,13 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="app.css">
 </head>
-<body ng-controller="UserCtrl as user" ng-cloak>
+<body ng-controller="UserCtrl as u" ng-cloak>
   <header>
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h4>Welcome {{ username }}</h4>
+        <h4>Welcome {{ user.username }}</h4>
+        <span>Your Score:{{user.tscore}}</span>
       </div>
       <div class="col-md-offset-4 col-md-4">
         <div class="controls">
